--- a/src/components/SemanticComponents/Footer/Footer.css
+++ b/src/components/SemanticComponents/Footer/Footer.css
@@ -3,7 +3,7 @@ background-color: #333;
 color: white;
 text-align: center;
 padding: 1rem;
-position: fixed;
+position: relative;
 bottom: 0;
 width: 100%;
 z-index: 1000;
